--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get_it: ^7.2.0
   jwt_decode: ^0.3.1
   uiblock: ^2.0.1
+  flutter_paypal: ^0.0.8
 
 dev_dependencies:
   flutter_test:
